# in_scraper

./: .gitignore  Cargo.toml  README.md  debug_login.rs  linkedin_auth_guide.sh  search  search.sh  temp_cargo.toml  test  update
examples/: debug_login_full.rs  debug_profile.rs  scrape_company.rs  scrape_person.rs  search_jobs.rs
html/: company.html  job.html  jobs.html  people.html  person.html
scripts/: update
src/: cli.rs  client.rs  commands.rs  company.rs  config.rs  error.rs  items.rs  job.rs  lib.rs  main.rs  models.rs  person.rs  scraping.rs  selectors.rs
src/middleware/: downloader.rs  mod.rs  spider.rs
src/pipeline/: json_lines.rs  mod.rs
src/selectors/: company_selectors.rs  job_selectors.rs  mod.rs  people_selectors.rs
src/spiders/: base.rs  company.rs  company_profile.rs  jobs.rs  mod.rs  people.rs  people_profile.rs
src/utils/: http_client.rs  mod.rs  proxy_rotator.rs  proxy_validator.rs  selector_utils.rs
