[package]
name = "in_scraper"
version = "0.1.0"
edition = "2021"
description = "A fast and simple LinkedIn scraper written in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
urlencoding = "2.1"
clap = { version = "4.4", features = ["derive", "env"] }
tabled = "0.15"
rpassword = "7.3"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "scrape_person"
path = "examples/scrape_person.rs"

[[example]]
name = "scrape_company"
path = "examples/scrape_company.rs"

[[example]]
name = "search_jobs"
path = "examples/search_jobs.rs"

[[bin]]
name = "in_scraper"
path = "src/main.rs" 