[package]
name = "in_scraper"
version = "0.1.0"
edition = "2021"
description = "A fast and simple LinkedIn scraper written in Rust"
license = "MIT"

[dependencies]
url = "2.5"
regex = "1.11"
dotenv = "0.15"
tabled = "0.20"
scraper = "0.23"
thiserror = "2.0"
serde_json = "1.0"
urlencoding = "2.1"
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

[[bin]]
name = "in_scraper"
path = "src/main.rs" 
